# freetube

./: .gitignore  API.md  ARCHITECTURE.md  Makefile  README.md  TODO.md  dune-project  freetube.opam  streams.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
debian/: changelog  control  copyright  freetube-plugin.install  freetube.install  freetube.service  freetube.sysusers  freetube.tmpfiles  rules
docs/: device-capabilities.md  plugin.md
docs/protocols/: README.md  airplay2.md  dlna.md  hls-dash.md  mpegts-muxed-streams.md  segments-and-codecs.md  youtube-ingest.md
plugin/: manifest.json  popup.html
scripts/: stream_local.sh  test_stream.sh  validate_hls.sh  verify_stream.sh  yt-mirror.sh
src/airplay/: airplay_http.ml  bplist.ml  client.ml  crypto.ml  discovery.ml  dune  error.ml  error.mli  features.ml  hap_stream.ml  hap_transport.ml  hap_transport.mli  hkdf.ml  http_tcp.ml  identity.ml  mdns.ml  ntp.ml  ntp_server.ml  ntp_server.mli  pair_verify.ml  pair_verify_driver.ml  pairing.ml  pairing.mli  playback.ml  rtsp.ml  session.ml  session.mli  srp.ml  tlv8.ml
src/api/: airplay_pairing.ml  config_device.ml  cookies.ml  dune  session_api.ml  stream_format.ml  vendor.ml
src/codec/: codec.ml  dune
src/config/: config.ml  dune
src/device/: device.ml  dune
src/devices/: device_store.ml  discovery_airplay.ml  discovery_dlna.ml  dune  slug.ml  vendor.ml
src/dlna/: av_transport.ml  client.ml  device_description.ml  didl_lite.ml  discovery.ml  discovery.mli  dune  error.ml  error.mli  mime.ml  mime.mli  request.ml  session.ml  session.mli  ssdp.ml
src/freetube/: .#log_config.ml  airplay_credentials.ml  airplay_handler.ml  airplay_pairing.ml  app.ml  config_global.ml  config_handler.ml  cors.ml  devices_handler.ml  dune  handler_error.ml  json_io.ml  log_config.ml  main.ml  mdns_advertise.ml  middleware.ml  request.ml  response.ml  server.ml  session.ml  sessions.ml  sessions_handler.ml  sink.ml  static.ml  streamed_file.ml
src/plugin/: api_client.ml  background.ml  chrome.ml  content.ml  cookies_fetch.ml  dune  messages.ml  popup.ml
src/stream/: bmff.ml  bmff_builder.ml  brand_override.ml  byte_range_source.ml  cache.ml  codec_string.ml  container_to_fmp4.ml  dash.ml  dedup.ml  dune  ebml.ml  ffmpeg.ml  hls.ml  http_range.ml  iframe_stream.ml  jpeg_size.ml  live_backoff.ml  prefetch.ml  probe.ml  producer.ml  segment_fetcher.ml  segment_split.ml  selector.ml  source.ml  (+7 more)
src/youtube/: dune  extract.ml  fetcher.ml  testdata.json  testdata2.json  video_info.ml  youtube.ml  yt_probe.ml
tests/: test_nyc.sh
(+10 files in other folders)
