(library
 (name dlna)
 (modules client)
 (libraries base yojson)
 (preprocess (pps ppx_deriving_yojson)))

(library
 (name dlna_protocol)
 (modules :standard \ client)
 (libraries dlna util config base eio ezxmlm uri logs yojson)
 (inline_tests)
 (preprocess (pps ppx_inline_test ppx_expect ppx_deriving_yojson)))
